%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blob Controller
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: Shoot
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Ready
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Moving
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Death
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Push
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: Walk
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110700000}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110100000
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110232505}
  m_DstState: {fileID: 110264585}
  m_TransitionDuration: .2525253
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .74747467
  - m_ConditionMode: 2
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .74747467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110118427
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110232505}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .2525253
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .74747467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110121188
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110247407}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .182926789
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .817073226
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110122459
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .0833332837
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .916666746
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110124094
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110232505}
  m_DstState: {fileID: 110296048}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110139657
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110262571}
  m_TransitionDuration: .0248076841
  m_TransitionOffset: .175576806
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Push
    m_EventTreshold: 0
    m_ExitTime: .916666746
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110146472
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264585}
  m_DstState: {fileID: 110232505}
  m_TransitionDuration: .31249994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .68750006
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .68750006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110148240
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110296048}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .260868877
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .739131093
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110148800
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110247407}
  m_DstState: {fileID: 110262571}
  m_TransitionDuration: .0943715274
  m_TransitionOffset: .121025652
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Push
    m_EventTreshold: 0
    m_ExitTime: .817073226
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110149471
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262571}
  m_DstState: {fileID: 110264585}
  m_TransitionDuration: .24999997
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Shoot
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110156036
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262571}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110157331
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110232505}
  m_DstState: {fileID: 110200000}
  m_TransitionDuration: .2525253
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .74747467
  - m_ConditionMode: 2
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .74747467
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .74747467
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110161493
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110296048}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .260868877
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .739131093
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110162499
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264585}
  m_DstState: {fileID: 110247407}
  m_TransitionDuration: .15625
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Shoot
    m_EventTreshold: 0
    m_ExitTime: .84375
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110163140
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110247407}
  m_DstState: {fileID: 110232505}
  m_TransitionDuration: .182926789
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .817073226
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110163254
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264585}
  m_DstState: {fileID: 110262571}
  m_TransitionDuration: .458713382
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Shoot
    m_EventTreshold: 0
    m_ExitTime: .68750006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110175255
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264585}
  m_DstState: {fileID: 110296048}
  m_TransitionDuration: .222222224
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .777777791
  - m_ConditionMode: 2
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .777777791
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110177492
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110264585}
  m_DstState: {fileID: 110262982}
  m_TransitionDuration: .31249994
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Death
    m_EventTreshold: 0
    m_ExitTime: .68750006
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110178593
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110200000}
  m_DstState: {fileID: 110232505}
  m_TransitionDuration: .0833332837
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .916666746
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .916666746
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110179489
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110296048}
  m_DstState: {fileID: 110264585}
  m_TransitionDuration: .260868877
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .739131093
  - m_ConditionMode: 1
    m_ConditionEvent: Ready
    m_EventTreshold: 0
    m_ExitTime: .739131093
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110185403
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110296048}
  m_DstState: {fileID: 110232505}
  m_TransitionDuration: .260868877
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: Walk
    m_EventTreshold: 0
    m_ExitTime: .739131093
  - m_ConditionMode: 1
    m_ConditionEvent: Moving
    m_EventTreshold: 0
    m_ExitTime: .739131093
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110187624
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110262571}
  m_DstState: {fileID: 110247407}
  m_TransitionDuration: .24999997
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: Shoot
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 5
    m_ConditionEvent: Shoot
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110200000
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4103ea5076ee28a4b836c48db306e219, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 12, y: 228, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110232505
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4ee0aa8ff93a4a44b9edbfa50b0d86dd, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -408, y: 120, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110247407
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Fire
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: b157cdcdb0f1cbe4dad60f2bfe986755, type: 3}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 336, y: -144, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110262571
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Push
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: c4c79ab2f7fbd9546825a19805a33b6b, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 396, y: -192, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110262982
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8a3ee187508053745952c1d06545961b, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: 600, y: 12, z: 0}
  m_IKOnFeet: 1
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110264585
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Aim
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4103ea5076ee28a4b836c48db306e219, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -144, y: -156, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110270745
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Blob Death
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8a3ee187508053745952c1d06545961b, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -73, y: 65, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110296048
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 'Walk '
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4a93e70826d3e6140bf202993ea5c495, type: 2}
  m_ParentStateMachine: {fileID: 110700000}
  m_Position: {x: -108, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110700000
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110200000}
  m_States:
  - {fileID: 110200000}
  - {fileID: 110264585}
  - {fileID: 110232505}
  - {fileID: 110262982}
  - {fileID: 110262571}
  - {fileID: 110296048}
  - {fileID: 110270745}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second: []
    data:
      first: {fileID: 110200000}
      second:
      - {fileID: 110178593}
      - {fileID: 110122459}
      - {fileID: 110139657}
    data:
      first: {fileID: 110232505}
      second:
      - {fileID: 110100000}
      - {fileID: 110157331}
      - {fileID: 110118427}
      - {fileID: 110124094}
    data:
      first: {fileID: 110262571}
      second:
      - {fileID: 110156036}
      - {fileID: 110149471}
    data:
      first: {fileID: 110262982}
      second: []
    data:
      first: {fileID: 110264585}
      second:
      - {fileID: 110177492}
      - {fileID: 110163254}
      - {fileID: 110146472}
      - {fileID: 110175255}
    data:
      first: {fileID: 110296048}
      second:
      - {fileID: 110148240}
      - {fileID: 110161493}
      - {fileID: 110185403}
      - {fileID: 110179489}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: -444, y: -36, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
